# matter-edit

./: LICENSE  README.md  matteredit.py  matterselect.py  pyproject.toml
src/matteredit/: __init__.py  parse_action.py  version.py
